Make exporter-metrics compatible with Java 8